nginx-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-webserver
  namespace: telecom-edge
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          # 👇 1. ONDE o arquivo vai aparecer dentro do contêiner do Nginx
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
      # 👇 2. DE ONDE o Kubernetes vai puxar esse arquivo (do seu ConfigMap)
      volumes:
        - name: html-volume
          configMap:
            name: nginx-site-html
